add response script